[workspace]
members = [
    "common",
    "consumer",
    "platforms/macos",
    "platforms/unix",
    "platforms/windows",
    "platforms/winit",
]
default-members = [
    "common",
    "consumer",
    "platforms/winit",
]

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
panic = "abort"
